--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,85 +1,3 @@
-<!doctype html>
-<html lang="hu">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- CSRF Token -->
-
-    <title>{{{ title }}}</title>
-    <script src="js/app.js" ></script>
-    <script src="js/bootstrap.min.js" ></script>
-    <script src="js/jquery.min.js" ></script>
-    <script src="js/admin.js" ></script>
-    <script src="js/bootstrap.js" ></script>
-    <script src="js/jasny-bootstrap.min.js" ></script>
-    
-    <!-- Fonts -->
-    <link rel="dns-prefetch" href="//fonts.gstatic.com">
-    <link href="https://fonts.bunny.net/css?family=Nunito" rel="stylesheet">
-    <link href="css/app.css" rel="stylesheet">
-
-    <!-- Scripts -->
-</head>
-<body>
-    <div id="app">
-        <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm">
-            <div class="container">
-                <a class="navbar-brand" href="home.php">
-                    <img src="/images/MCCLogo.png'" width="100" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <!-- Left Side Of Navbar -->
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">Rendezvények</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Jelentkezések</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Nem tudom mi</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Ez is lehet valami</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Talán még ez is</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Ez meg excel report?</a></li>
-                        <li class="nav-item dropdown">
-                            <a id="navbarDropdown2" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
-                            Legördülő
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                            <a class="dropdown-item" href="#">Almenü1</a>
-                            <a class="dropdown-item" href="#">Almenü2</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Leválasztott menü</a>
-                            </div>
-                        </li>
-                    </ul>
-
-                    <!-- Right Side Of Navbar -->
-                    <ul class="navbar-nav ms-auto">
-                        <!-- Authentication Links -->
-                               
-                            <li class="nav-item dropdown">
-                                <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
-                                    UserName
-                                </a>
-
-                                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#"
-                                       onclick="event.preventDefault();
-                                                     document.getElementById('logout-form').submit();">
-                                        Kijelentkezés
-                                    </a>
-
-                                    
-                                </div>
-                            </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <main class="py-4">
+Layout
             {{{ body }}}
-        </main>
-    </div>
-</body>
-</html>
+
