--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,18 +32,13 @@
                                 </a>
                                 <ul>
                                     <li class="active">
-                                        <a href="intel_marketing_dashboard.html" title="Marketing Dashboard" data-filter-tags="application intel marketing dashboard">
-                                            <span class="nav-link-text" data-i18n="nav.application_intel_marketing_dashboard">Közelgő események</span>
+                                        <a href="/home" title="Marketing Dashboard" data-filter-tags="application intel marketing dashboard">
+                                            <span class="nav-link-text" data-i18n="nav.application_intel_marketing_dashboard">Főoldal</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="intel_analytics_dashboard.html" title="Analytics Dashboard" data-filter-tags="application intel analytics dashboard">
+                                        <a href="/event/all" title="Analytics Dashboard" data-filter-tags="application intel analytics dashboard">
                                             <span class="nav-link-text" data-i18n="nav.application_intel_analytics_dashboard">Összes esemény</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="intel_introduction.html" title="Introduction" data-filter-tags="application intel introduction">
-                                            <span class="nav-link-text" data-i18n="nav.application_intel_introduction">Véget ért események</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -55,23 +50,8 @@
                                 </a>
                                 <ul>
                                     <li>
-                                        <a href="settings_how_it_works.html" title="How it works" data-filter-tags="theme settings how it works">
-                                            <span class="nav-link-text" data-i18n="nav.theme_settings_how_it_works">How it works</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="settings_layout_options.html" title="Layout Options" data-filter-tags="theme settings layout options">
-                                            <span class="nav-link-text" data-i18n="nav.theme_settings_layout_options">Layout Options</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="settings_skin_options.html" title="Skin Options" data-filter-tags="theme settings skin options">
-                                            <span class="nav-link-text" data-i18n="nav.theme_settings_skin_options">Skin Options</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="settings_saving_db.html" title="Saving to Database" data-filter-tags="theme settings saving to database">
-                                            <span class="nav-link-text" data-i18n="nav.theme_settings_saving_to_database">Saving to Database</span>
+                                        <a href="#" title="HA KELL" data-filter-tags="theme settings how it works">
+                                            <span class="nav-link-text" data-i18n="nav.theme_settings_how_it_works">HA KELL</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -118,7 +98,7 @@
                         </div>
                         <div class="subheader">
                             <h1 class="subheader-title">
-                                <i class='subheader-icon fal fa-chart-area'></i> Marketing <span class='fw-300'>Dashboard</span>
+                                <i class='subheader-icon fal fa-window'></i> Főoldal <span class='fw-300'></span>
                                 <small>
                                 </small>
                             </h1>
@@ -129,7 +109,7 @@
                                     <div class="">
                                         <h3 class="display-4 d-block l-h-n m-0 fw-500">
                                             21.5k
-                                            <small class="m-0 l-h-n">users signed up</small>
+                                            <small class="m-0 l-h-n">Szám stat 1</small>
                                         </h3>
                                     </div>
                                     <i class="fal fa-user position-absolute pos-right pos-bottom opacity-15 mb-n1 mr-n1" style="font-size:6rem"></i>
@@ -140,7 +120,7 @@
                                     <div class="">
                                         <h3 class="display-4 d-block l-h-n m-0 fw-500">
                                             $10,203
-                                            <small class="m-0 l-h-n">Visual Index Figure</small>
+                                            <small class="m-0 l-h-n">Szám stat 2</small>
                                         </h3>
                                     </div>
                                     <i class="fal fa-gem position-absolute pos-right pos-bottom opacity-15  mb-n1 mr-n4" style="font-size: 6rem;"></i>
@@ -151,7 +131,7 @@
                                     <div class="">
                                         <h3 class="display-4 d-block l-h-n m-0 fw-500">
                                             - 103.72
-                                            <small class="m-0 l-h-n">Offset Balance Ratio</small>
+                                            <small class="m-0 l-h-n">Szám stat 3</small>
                                         </h3>
                                     </div>
                                     <i class="fal fa-lightbulb position-absolute pos-right pos-bottom opacity-15 mb-n5 mr-n6" style="font-size: 8rem;"></i>
@@ -162,7 +142,7 @@
                                     <div class="">
                                         <h3 class="display-4 d-block l-h-n m-0 fw-500">
                                             +40%
-                                            <small class="m-0 l-h-n">Product level increase</small>
+                                            <small class="m-0 l-h-n">Szám stat 4</small>
                                         </h3>
                                     </div>
                                     <i class="fal fa-globe position-absolute pos-right pos-bottom opacity-15 mb-n1 mr-n4" style="font-size: 6rem;"></i>
@@ -199,13 +179,13 @@
                                                         <tr>
                                                             <th scope="row">Esemény Második</th>
                                                             <td>2023-03-14 17:00</td>
-                                                            <td><span class="badge badge-danger badge-pill">Disabled</span></td>
+                                                            <td><span class="badge badge-danger badge-pill">Véget ért</span></td>
                                                             <td><a href="event/id"><button type="button" class="btn btn-info waves-effect waves-themed">Résztvevők megtekintése</button></a></td>
                                                         </tr>
                                                         <tr>
                                                             <th scope="row">Esemény harmadik</th>
                                                             <td>2023-03-14 17:00</td>
-                                                            <td><span class="badge badge-warning badge-pill">Inactive</span></td>
+                                                            <td><span class="badge badge-warning badge-pill">Sárga jelzés</span></td>
                                                             <td><a href="event/id"><button type="button" class="btn btn-info waves-effect waves-themed">Résztvevők megtekintése</button></a></td>
                                                         </tr>
                                                     </tbody>
