--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,8 +27,8 @@
             </div>
         </div>
         <video poster="img/backgrounds/clouds.png" id="bgvid" playsinline autoplay muted loop>
-            <source src="media/video/cc.webm" type="video/webm">
-            <source src="media/video/cc.mp4" type="video/mp4">
+            <source src="media/video/mccintro.webm" type="video/webm">
+            <source src="media/video/mccintro.mp4" type="video/mp4">
         </video>
         <script src="js/vendors.bundle.js"></script>
         <script src="js/app.bundle.js"></script>
