--- a/views/eventApplicants.hbs
+++ b/views/eventApplicants.hbs
@@ -31,7 +31,7 @@
                                     <span class="nav-link-text" data-i18n="nav.application_intel">Események kezelése</span>
                                 </a>
                                 <ul>
-                                    <li class="active">
+                                    <li>
                                         <a href="/home" title="Marketing Dashboard" data-filter-tags="application intel marketing dashboard">
                                             <span class="nav-link-text" data-i18n="nav.application_intel_marketing_dashboard">Főoldal</span>
                                         </a>
@@ -39,6 +39,11 @@
                                     <li>
                                         <a href="/event/all" title="Analytics Dashboard" data-filter-tags="application intel analytics dashboard">
                                             <span class="nav-link-text" data-i18n="nav.application_intel_analytics_dashboard">Összes esemény</span>
+                                        </a>
+                                    </li>
+                                    <li class="active">
+                                        <a href="#" title="Analytics Dashboard" data-filter-tags="application intel analytics dashboard">
+                                            <span class="nav-link-text" data-i18n="nav.application_intel_analytics_dashboard">[ESEMÉNY NEVE]</span>
                                         </a>
                                     </li>
                                 </ul>
